[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/Square.png" type="Texture" id=1]
[ext_resource path="res://objects/Powerup.gd" type="Script" id=2]
[ext_resource path="res://common/Appear.tres" type="Animation" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.77818, 7.77818 )

[node name="PowerupReload" type="Sprite"]
modulate = Color( 0.176471, 0.843137, 0.533333, 1 )
rotation = -0.785398
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 1 )
script = ExtResource( 2 )
player_variable_modify = "reload_speed"
player_variable_set = -0.05

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
visible = false
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Appear"
anims/Appear = ExtResource( 3 )

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
